--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <title>Lottery Web2.0</title>
+    <head>
+            <title>Lottery Web2.0</title>
+            <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+            <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+            <script type="text/babel" src="index.js"></script>
+    </head>
+   
     <body>
-        <h1>Lottery Information</h1>
+       
+        <div id="reactBinding">
+        </div>
     </body>
 </html>
